--- a/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification.ipynb
+++ b/AIML_Module_3_Lab_3_Using_KNN_for_Text_Classification.ipynb
@@ -367,23 +367,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
-          "background_save": true,
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 73
         },
         "id": "jU6875-NxrHw",
-        "outputId": "3b32c16c-9d29-4b6e-d055-8184a9c4de37"
+        "outputId": "92d9d6d0-13b7-44a7-cf0c-19599e19af83"
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-691d0f61-6820-4322-ac1c-90752d261817\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-7f85512e-9b94-4728-a240-192096704ad7\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-691d0f61-6820-4322-ac1c-90752d261817\">\n",
+              "     <output id=\"result-7f85512e-9b94-4728-a240-192096704ad7\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -563,13 +567,16 @@
               "};\n",
               "})(self);\n",
               "</script> "
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving reviews.csv to reviews.csv\n"
+          ]
         }
       ],
       "source": [
@@ -737,11 +744,218 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "c1GZgvXCsKX1"
+        "id": "c1GZgvXCsKX1",
+        "outputId": "cd15adbe-b2c5-4036-fb3f-f137ae6fb2f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "     <input type=\"file\" id=\"files-73711d7d-328c-4edd-a0c5-7457de549125\" name=\"files[]\" multiple disabled\n",
+              "        style=\"border:none\" />\n",
+              "     <output id=\"result-73711d7d-328c-4edd-a0c5-7457de549125\">\n",
+              "      Upload widget is only available when the cell has been executed in the\n",
+              "      current browser session. Please rerun this cell to enable.\n",
+              "      </output>\n",
+              "      <script>// Copyright 2017 Google LLC\n",
+              "//\n",
+              "// Licensed under the Apache License, Version 2.0 (the \"License\");\n",
+              "// you may not use this file except in compliance with the License.\n",
+              "// You may obtain a copy of the License at\n",
+              "//\n",
+              "//      http://www.apache.org/licenses/LICENSE-2.0\n",
+              "//\n",
+              "// Unless required by applicable law or agreed to in writing, software\n",
+              "// distributed under the License is distributed on an \"AS IS\" BASIS,\n",
+              "// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
+              "// See the License for the specific language governing permissions and\n",
+              "// limitations under the License.\n",
+              "\n",
+              "/**\n",
+              " * @fileoverview Helpers for google.colab Python module.\n",
+              " */\n",
+              "(function(scope) {\n",
+              "function span(text, styleAttributes = {}) {\n",
+              "  const element = document.createElement('span');\n",
+              "  element.textContent = text;\n",
+              "  for (const key of Object.keys(styleAttributes)) {\n",
+              "    element.style[key] = styleAttributes[key];\n",
+              "  }\n",
+              "  return element;\n",
+              "}\n",
+              "\n",
+              "// Max number of bytes which will be uploaded at a time.\n",
+              "const MAX_PAYLOAD_SIZE = 100 * 1024;\n",
+              "\n",
+              "function _uploadFiles(inputId, outputId) {\n",
+              "  const steps = uploadFilesStep(inputId, outputId);\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  // Cache steps on the outputElement to make it available for the next call\n",
+              "  // to uploadFilesContinue from Python.\n",
+              "  outputElement.steps = steps;\n",
+              "\n",
+              "  return _uploadFilesContinue(outputId);\n",
+              "}\n",
+              "\n",
+              "// This is roughly an async generator (not supported in the browser yet),\n",
+              "// where there are multiple asynchronous steps and the Python side is going\n",
+              "// to poll for completion of each step.\n",
+              "// This uses a Promise to block the python side on completion of each step,\n",
+              "// then passes the result of the previous step as the input to the next step.\n",
+              "function _uploadFilesContinue(outputId) {\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  const steps = outputElement.steps;\n",
+              "\n",
+              "  const next = steps.next(outputElement.lastPromiseValue);\n",
+              "  return Promise.resolve(next.value.promise).then((value) => {\n",
+              "    // Cache the last promise value to make it available to the next\n",
+              "    // step of the generator.\n",
+              "    outputElement.lastPromiseValue = value;\n",
+              "    return next.value.response;\n",
+              "  });\n",
+              "}\n",
+              "\n",
+              "/**\n",
+              " * Generator function which is called between each async step of the upload\n",
+              " * process.\n",
+              " * @param {string} inputId Element ID of the input file picker element.\n",
+              " * @param {string} outputId Element ID of the output display.\n",
+              " * @return {!Iterable<!Object>} Iterable of next steps.\n",
+              " */\n",
+              "function* uploadFilesStep(inputId, outputId) {\n",
+              "  const inputElement = document.getElementById(inputId);\n",
+              "  inputElement.disabled = false;\n",
+              "\n",
+              "  const outputElement = document.getElementById(outputId);\n",
+              "  outputElement.innerHTML = '';\n",
+              "\n",
+              "  const pickedPromise = new Promise((resolve) => {\n",
+              "    inputElement.addEventListener('change', (e) => {\n",
+              "      resolve(e.target.files);\n",
+              "    });\n",
+              "  });\n",
+              "\n",
+              "  const cancel = document.createElement('button');\n",
+              "  inputElement.parentElement.appendChild(cancel);\n",
+              "  cancel.textContent = 'Cancel upload';\n",
+              "  const cancelPromise = new Promise((resolve) => {\n",
+              "    cancel.onclick = () => {\n",
+              "      resolve(null);\n",
+              "    };\n",
+              "  });\n",
+              "\n",
+              "  // Wait for the user to pick the files.\n",
+              "  const files = yield {\n",
+              "    promise: Promise.race([pickedPromise, cancelPromise]),\n",
+              "    response: {\n",
+              "      action: 'starting',\n",
+              "    }\n",
+              "  };\n",
+              "\n",
+              "  cancel.remove();\n",
+              "\n",
+              "  // Disable the input element since further picks are not allowed.\n",
+              "  inputElement.disabled = true;\n",
+              "\n",
+              "  if (!files) {\n",
+              "    return {\n",
+              "      response: {\n",
+              "        action: 'complete',\n",
+              "      }\n",
+              "    };\n",
+              "  }\n",
+              "\n",
+              "  for (const file of files) {\n",
+              "    const li = document.createElement('li');\n",
+              "    li.append(span(file.name, {fontWeight: 'bold'}));\n",
+              "    li.append(span(\n",
+              "        `(${file.type || 'n/a'}) - ${file.size} bytes, ` +\n",
+              "        `last modified: ${\n",
+              "            file.lastModifiedDate ? file.lastModifiedDate.toLocaleDateString() :\n",
+              "                                    'n/a'} - `));\n",
+              "    const percent = span('0% done');\n",
+              "    li.appendChild(percent);\n",
+              "\n",
+              "    outputElement.appendChild(li);\n",
+              "\n",
+              "    const fileDataPromise = new Promise((resolve) => {\n",
+              "      const reader = new FileReader();\n",
+              "      reader.onload = (e) => {\n",
+              "        resolve(e.target.result);\n",
+              "      };\n",
+              "      reader.readAsArrayBuffer(file);\n",
+              "    });\n",
+              "    // Wait for the data to be ready.\n",
+              "    let fileData = yield {\n",
+              "      promise: fileDataPromise,\n",
+              "      response: {\n",
+              "        action: 'continue',\n",
+              "      }\n",
+              "    };\n",
+              "\n",
+              "    // Use a chunked sending to avoid message size limits. See b/62115660.\n",
+              "    let position = 0;\n",
+              "    do {\n",
+              "      const length = Math.min(fileData.byteLength - position, MAX_PAYLOAD_SIZE);\n",
+              "      const chunk = new Uint8Array(fileData, position, length);\n",
+              "      position += length;\n",
+              "\n",
+              "      const base64 = btoa(String.fromCharCode.apply(null, chunk));\n",
+              "      yield {\n",
+              "        response: {\n",
+              "          action: 'append',\n",
+              "          file: file.name,\n",
+              "          data: base64,\n",
+              "        },\n",
+              "      };\n",
+              "\n",
+              "      let percentDone = fileData.byteLength === 0 ?\n",
+              "          100 :\n",
+              "          Math.round((position / fileData.byteLength) * 100);\n",
+              "      percent.textContent = `${percentDone}% done`;\n",
+              "\n",
+              "    } while (position < fileData.byteLength);\n",
+              "  }\n",
+              "\n",
+              "  // All done.\n",
+              "  yield {\n",
+              "    response: {\n",
+              "      action: 'complete',\n",
+              "    }\n",
+              "  };\n",
+              "}\n",
+              "\n",
+              "scope.google = scope.google || {};\n",
+              "scope.google.colab = scope.google.colab || {};\n",
+              "scope.google.colab._files = {\n",
+              "  _uploadFiles,\n",
+              "  _uploadFilesContinue,\n",
+              "};\n",
+              "})(self);\n",
+              "</script> "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving spam.csv to spam.csv\n"
+          ]
+        }
+      ],
       "source": [
         "# Upload the spam text data CSV file that has been shared with you. You can also download the file from https://www.kaggle.com/datasets/uciml/sms-spam-collection-dataset\n",
         "# Run this cell, click on the 'Choose files' button and upload the file.\n",
@@ -876,39 +1090,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1. Why TF-IDF is usually better than Bag-of-Words (BoW)?\n",
+        ". Why TF-IDF is usually better than Bag-of-Words?\n",
         "\n",
-        "BoW problem: It counts word frequency only, so common words (“the”, “is”) dominate and important rare words get less weight.\n",
+        "BoW counts frequency only, so common words dominate.\n",
         "\n",
-        "TF-IDF solution: It gives higher weight to rare but important words and lower weight to common words. This helps the model focus on meaningful terms → better accuracy.\n",
+        "TF-IDF lowers weight for very common words and increases weight for rare, important words → focuses on meaningful terms → better accuracy.\n",
         "\n",
-        "2. Techniques better than BoW and TF-IDF:\n",
+        "2. Techniques better than BoW & TF-IDF:\n",
         "\n",
-        "Word Embeddings (Word2Vec, GloVe, FastText) → capture meaning and context of words.\n",
+        "Word Embeddings (Word2Vec, GloVe, FastText) → capture word meaning & context.\n",
         "\n",
-        "Transformers / BERT → understand word meaning with context in whole sentence.\n",
+        "Transformers (BERT, GPT) → understand full sentence meaning.\n",
         "\n",
-        "Doc2Vec → represents entire documents in a vector with meaning.\n",
+        "Doc2Vec → represents entire documents meaningfully.\n",
         "\n",
         "3. Stemming vs Lemmatization – Pros & Cons:\n",
         "\n",
         "Feature\tStemming\tLemmatization\n",
-        "What it does\tCuts off word endings to get the root form (e.g., \"playing\" → \"play\")\tUses dictionary and grammar to get base word (e.g., \"better\" → \"good\")\n",
-        "Pros\tFast, simple\tMore accurate meaning\n",
-        "Cons\tCan produce non-real words (“studies” → “studi”)\tSlower, needs more resources"
+        "What it does\tRemoves endings to get root (e.g., “playing” → “play”)\tUses dictionary rules to get base (e.g., “better” → “good”)\n",
+        "Pros\tFast & simple\tAccurate meaning\n",
+        "Cons\tCan produce invalid words (“studies” → “studi”)\tSlower, needs linguistic resources"
       ],
       "metadata": {
-        "id": "HEesrIOrk8av"
+        "id": "AvTerGogs0g6"
       }
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ngfQPbs6k91o"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "-uUw16_tkGdV"
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
